# new_test

./: CLAUDE.md  pyproject.toml  pyproject.toml.backup.b
configs/: train_hpc.yaml
nbs/: 000_three_channel_data_creation.ipynb  002_train_hpc.ipynb  00_core.ipynb  01_mask_accuracy.ipynb  02_pin_map.ipynb  03_create_single_parts_from_whole_image.ipynb  05_generate_image.ipynb  06_create_overlay_masks.ipynb  07_extract_problems_from_processed_image.ipynb  09_three_channel_model.ipynb  10_three_channel_dataset_creation.ipynb  11_label_studio_polygons.ipynb  12_extract_pins_where_msk_area_small.ipynb  13_noise_lighting.ipynb  14_three_channel_training.ipynb  15_three_channel_data_prep.ipynb  16_crop_image.ipynb  17_split_image_and_join_image.ipynb  17_three_channel_mask_creation.ipynb  18_gray_scale_mask_generation.ipynb  19_model_accuracy_and_copy_failed_image.ipynb  20_extract_missing_pins.ipynb  21_failed_pin_clustering.ipynb  22_extract_pins_from_mask.ipynb  23_patch_image_128.ipynb  24_labeling_agent.ipynb  25_faillure_analysis.missing_lead.ipynb  26_model_evaluation.new_model.ipynb  27_Failure_investigation.additional_pin.ipynb  28_preprocessing.image_registration.ipynb  28_preprocessing.rotation_image_based_ref_image.ipynb  29_labeling_agent.missing_single_pin.ipynb  31_image_gen.filter_min_image.ipynb  32_model_evaluation.frm_patch_model_whole_model.ipynb  33_data_processing.s3_bucket.ipynb  34_preprocessing.synthetic_data_gen.ipynb  35_image_gen.synthetic_noise_at_center.ipynb  36_model_development.sn_pin_model.ipynb  37_preprocessing.create_tf_dataset.ipynb  38_training.multigpu_training.ipynb  (+21 more)
new_test/: _modidx.py  core.py  crop_image_center.py  extract_dissimilar_pins.py  extract_missing_pin.py  extract_patches.py  extract_smaller_mask.py  label_studio.py  labeling_agent.py  mask_accuracy.py  mask_creation_3_c.py  mask_generation.py  noise_sharpen_gen.py  onnx_func.py  overlay_mask.py  pass_fail_image_copy.py  patching_image.py  pin_map.py  three_channel_data_creation.py  three_channel_dataset.py  three_channel_image_selection.py  three_channel_model.py  train_edge_model.py  training_edge_model multi-gpu.sh  training_edge_model.sh  training_with_config.py
new_test/failure_analysis/: missing_pin.py
new_test/image_gen/: synthetic_data.py
new_test/labeling_agent/: missing_single_pin.py
new_test/model_eval/: extract_problem_pins.py  two_image_model.py
new_test/patching/: edge_segmentation_model.py  filter_image_for_smaller_mask.py  inference_batch_image.py  model_development.py  preprocessing_input_image.py  training_pytorch.py
new_test/preprocessing/: image_registration.py  rot_image.py
new_test/preprocessing/zero_degree_solder_pin/: image_registration.py
new_test/three_channel_with_diff/preprocessing/: save_image.py
new_test/viz_utils/: tiling_viz.py
