[project]
name = "semvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastcore>=1.12.16",
    "ipykernel>=7.2.0",
    "nbdev>=3.0.12",
    "opencv-python-headless>=4.13.0.92",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://artifactory.intra.infineon.com/artifactory/api/pypi/pypi-pypi-org/simple"
default = true

[dependency-groups]
dev = [
    "semvision",
]

[tool.uv.sources]
be-vision-ad-tools = { path = "/home/ai_dsx.work/data/projects/goni/semvision", editable = true }

